<resources>
    <string name="app_name">Merch Manager</string>

    <string name="activity_event_creator">Event Creator</string>
    <string name="activity_checkout">Checkout</string>
    <string name="activity_merch_sale">Merch Seller</string>
    <string name="activity_inventory_manager">Inventory Manager</string>
    <string name="activity_set_manager">Set Manager</string>
    <string name="activity_merch_creator">Merch Creator</string>
    <string name="activity_set_creator">Set Creator</string>
    <string name="activity_view_sales">Sales Viewer</string>
    <string name="activity_analytics">Analytics</string>

    <string name="hint_enter_name">Name</string>
    <string name="hint_enter_set">Set (optional)</string>
    <string name="hint_enter_price">Price</string>
    <string name="hint_enter_discount">Discount (percent)</string>
    <string name="hint_enter_quantity">Quantity in stock</string>

    <string name="button_create">Create</string>
    <string name="button_sale">New Sale</string>
    <string name="button_manage_inventory">Manage Inventory</string>
    <string name="button_manage_sets">Manage Sets</string>
    <string name="button_view_sales">View Sales</string>
    <string name="button_analytics">Analytics</string>
    <string name="button_checkout">Total: $%.2f\nCheckout</string>
    <string name="button_override">Override Price</string>
    <string name="button_make_sale">Make Sale!</string>
    <string name="button_create_item">Create Item!</string>
    <string name="button_create_set">Create Set!</string>
    <string name="button_change_price">Change Price!</string>
    <string name="button_prints">Prints</string>
    <string name="button_postcards">Postcards</string>
    <string name="button_charms">Charms</string>
    <string name="button_buttons">Buttons</string>
    <string name="button_omanjuu">Omanjuu</string>
    <string name="button_stationery">Stationery</string>
    <string name="button_stickers">Stickers</string>
    <string name="button_other">Other</string>

    <string name="label_item_stock">Number in stock: %d</string>
    <string name="label_total_earned">Total Earned: </string>
    <string name="label_most_popular">Most Popular: </string>
    <string name="label_set_type">Type: </string>

    <string name="action_settings">Settings</string>

    <string name="EVENT_LIST">EVENT_LIST</string>
</resources>
