<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MerchSale">

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:onClick="Checkout"
        android:text="@string/button_checkout"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/typeButtons1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonsButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/button_buttons" />

        <Button
            android:id="@+id/charmsButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/button_charms" />

        <Button
            android:id="@+id/omanjuuButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/button_omanjuu" />

        <Button
            android:id="@+id/postcardsButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/button_postcards" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/typeButtons2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/typeButtons1"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/printsButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/button_prints" />

        <Button
            android:id="@+id/stationeryButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/button_stationery" />

        <Button
            android:id="@+id/stickersButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/button_stickers" />

        <Button
            android:id="@+id/otherButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/button_other" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/checkoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeButtons2">

        <LinearLayout
            android:id="@+id/merch_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>